--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DermChecker</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div id="app">
@@ -22,6 +22,6 @@
 
         <div id="results"></div>
 
-    <script src="/static/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
