Loading message and elements visibility

--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
         <div id="image">
             <img id="uploaded-image" alt="Uploaded Image" style="display:none;">
         </div>
-        
-        <button id="analyze-button" onclick="analyzeImage()">Analizza</button>
+
+        <div id="button-container">
+            <button id="analyze-button" style="display: none;" onclick="analyzeImage()">Analizza</button>
+        </div>
+
+        <div id="loading" style="display:none;">
+            <img id="loading-image" src="loading.gif" alt="Analizzando" />
+            <div id="loading-text">Analisi in corso...</div>
+        </div>
+
+        <div id="error-message" style="display: none;">Per favore, seleziona un'immagine prima di procedere.</div>
 
         <div id="results"></div>
 
